# mlxgpt

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  biome.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
docker/: 40-chilitrack-website-id.sh
docs/: mlx_cluster_training.md  nanochat_on_apple_silicon.md  reproducible_cluster_setup.md  rust_cpp_optimization_research.md  three_node_m4pro_research.md
nanochat_mlx/: __init__.py  checkpoint.py  config.py  data.py  io.py  model.py  tensor_parallel.py  tokenizer.py  training.py
scripts/: check_jaccl_ready.sh  cluster_run_inference.sh  cluster_run_smoke.sh  cluster_run_train.sh  cluster_sync_converted_model.sh  cluster_sync_mlx_checkpoint.sh  cluster_sync_training_inputs.sh  cluster_write_hostfiles.sh  convert_nanochat_to_mlx.py  export_mlx_checkpoint.py  generate_mlx.py  generate_mlx_hostfile.py  mlx_cluster_inference_smoke.py  mlx_distributed_smoke.py  print_jaccl_manual_setup.sh  report_d12_phase.py  report_mlx_comparison.py  setup_mlx_env.sh  setup_nanochat_mps.sh  smoke_test_mlx.py  train_mlx_cluster.py
site/: index.html  robots.txt  sitemap.xml
tests/: chilitrack-injection.test.sh  test_config.py  test_data.py  test_train_mlx_cluster.py  test_training_config.py
tests/e2e/: navigation.spec.ts  smoke.spec.ts
