[project]
name = "auto-mlx"
version = "0.1.0"
description = "Apple Silicon experiments for nanochat and MLX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.31.1",
    "numpy>=2.4.0",
    "safetensors>=0.7.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.0",
]

[project.optional-dependencies]
convert = [
    "torch>=2.9.1",
]
train = [
    "pyarrow>=24.0.0",
]

[tool.setuptools.packages.find]
include = ["nanochat_mlx*"]
