[project]
name = "auto-mlx"
version = "0.1.0"
description = "Apple Silicon experiments for nanochat and MLX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.32.0",
    "numpy>=2.5.1",
    "safetensors>=0.8.0",
    "tiktoken>=0.13.0",
    "tokenizers>=0.23.1",
]

[project.optional-dependencies]
convert = [
    "torch>=2.13.0",
]
train = [
    "pyarrow>=25.0.0",
]

[tool.setuptools.packages.find]
include = ["nanochat_mlx*"]
